--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>lk.ijse.dep13</groupId>
-    <artifactId>javafx-text-editor</artifactId>
+    <artifactId>swiftedit-text-editor</artifactId>
     <version>0.0.0</version>
 
     <properties>
